Some stuff :) IN PROGRESS - task 19: basic IPC-queue abstractions http://casual.laz.se/redmine/issues/show/19

--- a/makefile.cmk
+++ b/makefile.cmk
@@ -1,5 +1,6 @@
 
 
 
-Include(xatmi/makefile.cmk)
-Include(test/makefile.cmk)
+Build( xatmi/makefile.cmk)
+Build( common/makefile.cmk)
+Build( test/makefile.cmk)
