--- a/makefile.cmk
+++ b/makefile.cmk
@@ -1,6 +1,7 @@
 
 
-
+Build( utility/makefile.cmk)
 Build( common/makefile.cmk)
 Build( xatmi/makefile.cmk)
 Build( test/makefile.cmk)
+Build( broker/makefile.cmk)
