First isolated-unittest done.
Splitted queue-abstractions to one send::Queue and one receive::Queue.
The responsibilities becomes more natural. Seems to work pretty good.


IN PROGRESS - task 19: basic IPC-queue abstractions 
http://casual.laz.se/redmine/issues/show/19

--- a/broker/makefile.cmk
+++ b/broker/makefile.cmk
@@ -13,4 +13,4 @@ Compile( source/casual_broker_main.cpp, obj/casual_broker_main.o)
 LinkExecutable( casual_broker, \
 	obj/casual_broker.o \
 	obj/casual_broker_main.o, \
-	casual-common)
+	casual_common)
