--- a/xatmi/makefile.cmk
+++ b/xatmi/makefile.cmk
@@ -13,4 +13,4 @@ Compile( source/xatmi_server.cpp, obj/xatmi_server.o)
 LinkLibrary( casual-xatmi, \
 	obj/xatmi.o \
 	obj/xatmi_server.o, \
-	casual-common)
+	casual_common)
