IN PROGRESS - task 21: broker http://casual.laz.se/redmine/issues/show/21
Progress

--- a/utility/makefile.cmk
+++ b/utility/makefile.cmk
@@ -8,11 +8,13 @@ INCLUDE_PATHS= include \
 
 Compile( source/casual_utility_uuid.cpp, obj/casual_utility_uuid.o)
 Compile( source/casual_utility_environment.cpp, obj/casual_utility_environment.o)
+Compile( source/casual_utility_file.cpp, obj/casual_utility_file.o)
 
 
 LinkLibrary( casual_utility, \
 	obj/casual_utility_uuid.o \
-	obj/casual_utility_environment.o, \
+	obj/casual_utility_environment.o \
+	obj/casual_utility_file.o, \
 	)
 
 	
