--- a/.cproject
+++ b/.cproject
@@ -133,6 +133,14 @@
 				<useDefaultCommand>true</useDefaultCommand>
 				<runAllBuilders>true</runAllBuilders>
 			</target>
+			<target name="cross" path="" targetID="org.eclipse.cdt.build.MakeTargetBuilder">
+				<buildCommand>tools/bin/pmake</buildCommand>
+				<buildArguments>--debug --no-colors</buildArguments>
+				<buildTarget>cross</buildTarget>
+				<stopOnError>true</stopOnError>
+				<useDefaultCommand>true</useDefaultCommand>
+				<runAllBuilders>true</runAllBuilders>
+			</target>
 		</buildTargets>
 	</storageModule>
 </cproject>
