--- a/utility/makefile.cmk
+++ b/utility/makefile.cmk
@@ -14,6 +14,7 @@ Compile( source/casual_utility_uuid.cpp, obj/casual_utility_uuid.o)
 Compile( source/casual_utility_environment.cpp, obj/casual_utility_environment.o)
 Compile( source/casual_utility_file.cpp, obj/casual_utility_file.o)
 Compile( source/casual_utility_signal.cpp, obj/casual_utility_signal.o)
+Compile( source/casual_utility_platform.cpp, obj/casual_utility_platform.o)
 
 
 
@@ -21,7 +22,8 @@ LinkLibrary( casual_utility, \
 	obj/casual_utility_uuid.o \
 	obj/casual_utility_environment.o \
 	obj/casual_utility_file.o \
-	obj/casual_utility_signal.o, \
+	obj/casual_utility_signal.o \
+	obj/casual_utility_platform.o, \
 	${UUIDLIB})
 
 	
