IN PROGRESS - task 30: Calling context http://casual.laz.se/redmine/issues/show/30
WIP - backup/safety

--- a/common/makefile.cmk
+++ b/common/makefile.cmk
@@ -13,6 +13,7 @@ LIBRARY_PATHS= ../xatmi/bin \
 
 Compile( source/casual_server_context.cpp, obj/casual_server_context.o)
 Compile( source/casual_service_context.cpp, obj/casual_service_context.o)
+Compile( source/casual_calling_context.cpp, obj/casual_calling_context.o)
 Compile( source/casual_buffer.cpp, obj/casual_buffer.o)
 Compile( source/casual_ipc.cpp, obj/casual_ipc.o)
 Compile( source/casual_queue.cpp, obj/casual_queue.o)
@@ -22,6 +23,7 @@ Compile( source/casual_error.cpp, obj/casual_error.o)
 LinkLibrary( casual_common, \
 	obj/casual_server_context.o \
 	obj/casual_service_context.o \
+	obj/casual_calling_context.o \
 	obj/casual_buffer.o \
 	obj/casual_ipc.o \ 
 	obj/casual_queue.o \
