--- a/test/makefile.cmk
+++ b/test/makefile.cmk
@@ -12,13 +12,11 @@ LIBRARY_PATHS= ../xatmi/bin \
 
 
 Compile( source/template_server.cpp, obj/template_server.o)
-Compile( source/template_server_dispatcher.c, obj/template_server_dispatcher.o)
 
-
-LinkExecutable( test, \
-	obj/template_server.o  \
-	obj/template_server_dispatcher.o, \
-	casual-xatmi)
+LinkAtmiServer(test, \
+	obj/template_server.o, \
+	casual-xatmi, \
+	"casual_test1,casual_test2")
 	
 	
 Compile( source/template_client.cpp, obj/template_client.o)
