IN PROGRESS - task 30: Calling context http://casual.laz.se/redmine/issues/show/30
Working calling context. 
Client -> broker -> client -> server -> client.

Need to break more logic out so we can unittest it better, though...

--- a/utility/makefile.cmk
+++ b/utility/makefile.cmk
@@ -15,6 +15,7 @@ Compile( source/casual_utility_environment.cpp, obj/casual_utility_environment.o
 Compile( source/casual_utility_file.cpp, obj/casual_utility_file.o)
 Compile( source/casual_utility_signal.cpp, obj/casual_utility_signal.o)
 Compile( source/casual_utility_platform.cpp, obj/casual_utility_platform.o)
+Compile( source/casual_logger.cpp, obj/casual_logger.o)
 
 
 
@@ -23,7 +24,8 @@ LinkLibrary( casual_utility, \
 	obj/casual_utility_environment.o \
 	obj/casual_utility_file.o \
 	obj/casual_utility_signal.o \
-	obj/casual_utility_platform.o, \
+	obj/casual_utility_platform.o \
+	 obj/casual_logger.o, \
 	${UUIDLIB})
 
 	
