--- a/common/makefile.cmk
+++ b/common/makefile.cmk
@@ -14,7 +14,7 @@ LIBRARY_PATHS= ../xatmi/bin \
 Compile( source/casual_server_context.cpp, obj/casual_server_context.o)
 Compile( source/casual_service_context.cpp, obj/casual_service_context.o)
 Compile( source/casual_calling_context.cpp, obj/casual_calling_context.o)
-Compile( source/casual_buffer.cpp, obj/casual_buffer.o)
+Compile( source/casual_buffer_context.cpp, obj/casual_buffer_context.o)
 Compile( source/casual_ipc.cpp, obj/casual_ipc.o)
 Compile( source/casual_queue.cpp, obj/casual_queue.o)
 Compile( source/casual_error.cpp, obj/casual_error.o)
@@ -24,7 +24,7 @@ LinkLibrary( casual_common, \
 	obj/casual_server_context.o \
 	obj/casual_service_context.o \
 	obj/casual_calling_context.o \
-	obj/casual_buffer.o \
+	obj/casual_buffer_context.o \
 	obj/casual_ipc.o \ 
 	obj/casual_queue.o \
 	obj/casual_error.o,\ 
