--- a/xatmi/makefile.cmk
+++ b/xatmi/makefile.cmk
@@ -4,7 +4,8 @@ INCLUDE_PATHS= include \
 	../common/include \
 	../utility/include 
 
-LIBRARY_PATHS = ../common/bin
+LIBRARY_PATHS = ../common/bin \
+	../utility/bin \
 
 Compile( source/xatmi.cpp, obj/xatmi.o)
 Compile( source/xatmi_server.cpp, obj/xatmi_server.o)
@@ -13,4 +14,4 @@ Compile( source/xatmi_server.cpp, obj/xatmi_server.o)
 LinkLibrary( casual-xatmi, \
 	obj/xatmi.o \
 	obj/xatmi_server.o, \
-	casual_common)
+	casual_common casual_utility)
