--- a/serviceframework/makefile.cmk
+++ b/serviceframework/makefile.cmk
@@ -21,10 +21,12 @@ LinkLibrary( casual_sf,\
 //
 Compile( unittest/source/casual_isolatedunittest_namevaluepair.cpp, obj/casual_isolatedunittest_namevaluepair.o)
 Compile( unittest/source/casual_isolatedunittest_archive.cpp, obj/casual_isolatedunittest_archive.o)
+Compile( unittest/source/casual_isolatedunittest_traits.cpp, obj/casual_isolatedunittest_traits.o)
 
 
 LinkIsolatedUnittest( casual_sf_isolated, \
 	obj/casual_isolatedunittest_namevaluepair.o \
-	obj/casual_isolatedunittest_archive.o, \
+	obj/casual_isolatedunittest_archive.o \
+	obj/casual_isolatedunittest_traits.o, \
 	casual_sf)
 	
